Логика и GUI раундов в тренеровке. +правки ошибок.